--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseURL: https://portfolio.gardlt.io # todo: change site url.
 title: Potato Traveler - Portfolio  # todo: change site name.
 defaultContentLanguage: 'en'
 theme: eternity
-googleAnalytics: '' # todo: set your analytics id.
+googleAnalytics: 'G-D9ZZYHF9QV' # todo: set your analytics id.
 
 params:
   image: /images/people/3.jpg
@@ -37,7 +37,7 @@ params:
   specialPages:
     - work
     - archive
-  bypassWelcomePage: false # redirects "/" to "homepage" when it's true.
+  bypassWelcomePage: true # redirects "/" to "homepage" when it's true.
   plausible: '' # todo: set your plausible id.
   disableWelcomePageBackground: false # disables the background image on the homepage
   disableRadius: false
@@ -61,21 +61,21 @@ menu:
     - name: work
       url: /work/
       weight: 1
-    - name: people
-      url: /tags/people/
-      weight: 2
-    - name: nature
-      url: /tags/nature/
-      weight: 3
-    - name: food
-      url: /tags/food/
-      weight: 4
-    - name: animals
-      url: /tags/animals/
-      weight: 5
-    - name: city
-      url: /tags/city/
-      weight: 6
+    # - name: people
+    #   url: /tags/people/
+    #   weight: 2
+    # - name: nature
+    #   url: /tags/nature/
+    #   weight: 3
+    # - name: food
+    #   url: /tags/food/
+    #   weight: 4
+    # - name: animals
+    #   url: /tags/animals/
+    #   weight: 5
+    # - name: city
+    #   url: /tags/city/
+    #   weight: 6
     - name: about
       url: /about/
       weight: 7
